--- a/BookLab.Application/BookLab.Application.csproj
+++ b/BookLab.Application/BookLab.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BookLab.Domain\BookLab.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
