--- a/BookLab.Application/BookLab.Application.csproj
+++ b/BookLab.Application/BookLab.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mapster" Version="7.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BookLab.Domain\BookLab.Domain.csproj" />
   </ItemGroup>
 
